infrastructure/flux-webhook-receiver/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
spec:
  parentRefs:
  - name: "set-in-overlay"
    namespace: "set-in-overlay"
    sectionName: "set-in-overlay"
  hostnames:
  - "set-in-overlay"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
